<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ControlActivity" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/typeRegulator"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="21sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/PI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pi" />

    <Button
        android:id="@+id/PID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pid" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduceIP"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/IPtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/localhost"/>

</LinearLayout>