<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PopUpAdvanceOptionsRegulator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textViewUmin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/umin"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUmin_reg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColorHint="#0a198b"
            android:hint="@string/defMinus100" />

        <TextView
            android:id="@+id/textViewUmax"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/umax"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUmax_reg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:textColorHint="#0a198b"
            android:hint="@string/def100" />

        <TextView
            android:id="@+id/textViewTs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/ts"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTs_reg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:textColorHint="#0a198b"
            android:hint="@string/def0.1" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewManual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/manual"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:orientation="vertical"
                android:checkedButton="@+id/radioButton2" >

                <RadioButton
                    android:id="@+id/radioButtonManualTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labeltrue" />

                <RadioButton
                    android:id="@+id/radioButtonManualFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelfalse" />

            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

</ScrollView> 