<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/component"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />


    <Button
        android:id="@+id/buttonRegulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/regulator"  
        />

    <Button
        android:id="@+id/buttonProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/process"/>

</LinearLayout>