<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dp"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/labelu"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:minHeight="50dp"
	                    android:text="@string/u"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textStyle="bold" />

	                <ProgressBar
	                    android:id="@+id/progressBarU_SOP"
	                    style="?android:attr/progressBarStyleHorizontal"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:paddingTop="10dp"
	                    android:paddingLeft="10dp"
	                    android:progress="50" />

	            </LinearLayout>

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/labely"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:minHeight="50dp"
	                    android:text="@string/y"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textStyle="bold" />

	                <ProgressBar
	                    android:id="@+id/progressBarY_SOP"
	                    style="?android:attr/progressBarStyleHorizontal"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:paddingTop="10dp"
	                    android:paddingLeft="10dp"
	                    android:progress="50" />

	            </LinearLayout>

	            <TextView
	                android:id="@+id/labelFormula"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:gravity="center"
	                android:paddingLeft="10dp"
	                android:text="@string/formula"
	                android:textAlignment="center"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textSize="25sp"
	                android:textStyle="bold" />

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="horizontal"
	                android:paddingTop="40dp" >

	                <LinearLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:orientation="vertical" >

	                    <TextView
	                        android:id="@+id/labelMU"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:minHeight="50dp"
	                        android:paddingTop="15dp"
	                        android:text="@string/mu"
	                        android:textAppearance="?android:attr/textAppearanceLarge"
	                        android:textStyle="bold" />

	                    <TextView
	                        android:id="@+id/labelT1"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:minHeight="50dp"
	                        android:paddingTop="15dp"
	                        android:text="@string/t1"
	                        android:textAppearance="?android:attr/textAppearanceLarge"
	                        android:textStyle="bold" />

	                    <TextView
	                        android:id="@+id/labelT2"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:minHeight="50dp"
	                        android:paddingTop="15dp"
	                        android:text="@string/t2"
	                        android:textAppearance="?android:attr/textAppearanceLarge"
	                        android:textStyle="bold" />

	                </LinearLayout>

	                <LinearLayout
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:orientation="vertical" >

	                    <EditText
	                        android:id="@+id/editTextMU_SOP"
	                        android:layout_width="match_parent"
	                        android:layout_height="wrap_content"
	                        android:ems="10"
	                        android:inputType="numberDecimal"
	                        android:minHeight="50dp" 
	                        android:hint="@string/def1"
	                       	android:textColorHint="#0a198b" />

	                    <EditText
	                        android:id="@+id/editTextT1_SOP"
	                        android:layout_width="match_parent"
	                        android:layout_height="wrap_content"
	                        android:ems="10"
	                        android:inputType="numberDecimal"
	                        android:minHeight="50dp" 
	                        android:hint="@string/def1"
	                 		android:textColorHint="#0a198b"/>
	                    

	                    <EditText
	                        android:id="@+id/editTextT2_SOP"
	                        android:layout_width="match_parent"
	                        android:layout_height="wrap_content"
	                        android:ems="10"
	                        android:inputType="numberDecimal"
	                        android:minHeight="50dp"
	                        android:textColorHint="#0a198b"
	                        android:hint="@string/def10" />

	                </LinearLayout>

	            </LinearLayout>

	            <Button
	                android:id="@+id/buttonAdvanceOptions_SOP"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/AdvanceOptions" />
	            
	            <Button
	                android:id="@+id/buttonUpdateParameters_SOP"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/UpdateParameters" />

	            <Button
	                android:id="@+id/buttonStopSimulation_SOP"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/StartSimulation" />

</LinearLayout>

</ScrollView>